--- a/PulseApp/Scenes/History/History.storyboard
+++ b/PulseApp/Scenes/History/History.storyboard
@@ -28,7 +28,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="infoCell" id="w1W-oy-6vE" customClass="InfoCollectionCell" customModule="Bricket" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="infoCell" id="w1W-oy-6vE" customClass="InfoCollectionCell" customModule="PulseApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="31.5" width="350" height="500"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="NLG-hj-myg">
@@ -39,31 +39,40 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="350" height="500"/>
                                                     <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                                                     <prototypes>
-                                                        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="oneCell" id="fJK-dF-jGT" userLabel="oneCell" customClass="OneRateTableViewCell" customModule="PulseApp" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="28" width="350" height="124"/>
+                                                        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="graphCell" rowHeight="70" id="fJK-dF-jGT" customClass="DefaultTableViewCell" customModule="PulseApp" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="28" width="350" height="70"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fJK-dF-jGT" id="zyh-wI-ZOe">
+                                                                <rect key="frame" x="0.0" y="0.0" width="350" height="70"/>
+                                                                <autoresizingMask key="autoresizingMask"/>
+                                                            </tableViewCellContentView>
+                                                            <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
+                                                        </tableViewCell>
+                                                        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="oneCell" id="ltg-WN-n4i" userLabel="oneCell" customClass="OneRateTableViewCell" customModule="PulseApp" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="98" width="350" height="124"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ltg-WN-n4i" id="ao4-u4-7jb">
                                                                 <rect key="frame" x="0.0" y="0.0" width="350" height="124"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
-                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3tl-JV-Eju" customClass="OneRateView" customModule="PulseApp" customModuleProvider="target">
+                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K40-zL-odc" customClass="OneRateView" customModule="PulseApp" customModuleProvider="target">
                                                                         <rect key="frame" x="18" y="0.0" width="314" height="110"/>
                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                         <constraints>
-                                                                            <constraint firstAttribute="height" constant="110" id="YTi-5s-epg"/>
+                                                                            <constraint firstAttribute="height" constant="110" id="7Ip-AH-7YT"/>
                                                                         </constraints>
                                                                     </view>
                                                                 </subviews>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="trailing" secondItem="3tl-JV-Eju" secondAttribute="trailing" constant="18" id="7YE-bR-ZBn"/>
-                                                                    <constraint firstAttribute="bottom" secondItem="3tl-JV-Eju" secondAttribute="bottom" constant="14" id="V2c-AX-Hyx"/>
-                                                                    <constraint firstItem="3tl-JV-Eju" firstAttribute="top" secondItem="zyh-wI-ZOe" secondAttribute="top" id="W2Q-wU-aq7"/>
-                                                                    <constraint firstItem="3tl-JV-Eju" firstAttribute="leading" secondItem="zyh-wI-ZOe" secondAttribute="leading" constant="18" id="zUU-vG-0fx"/>
+                                                                    <constraint firstItem="K40-zL-odc" firstAttribute="leading" secondItem="ao4-u4-7jb" secondAttribute="leading" constant="18" id="6zi-W6-6VA"/>
+                                                                    <constraint firstAttribute="bottom" secondItem="K40-zL-odc" secondAttribute="bottom" constant="14" id="VeS-nv-yIE"/>
+                                                                    <constraint firstAttribute="trailing" secondItem="K40-zL-odc" secondAttribute="trailing" constant="18" id="XSb-ac-qRc"/>
+                                                                    <constraint firstItem="K40-zL-odc" firstAttribute="top" secondItem="ao4-u4-7jb" secondAttribute="top" id="fdD-PA-r7Y"/>
                                                                 </constraints>
                                                             </tableViewCellContentView>
-                                                            <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
                                                             <connections>
-                                                                <outlet property="oneRateView" destination="3tl-JV-Eju" id="4Tb-WP-NfW"/>
+                                                                <outlet property="oneRateView" destination="K40-zL-odc" id="ibw-mE-olg"/>
                                                             </connections>
                                                         </tableViewCell>
                                                     </prototypes>
@@ -85,7 +94,7 @@
                                             <outlet property="tableView" destination="Aqj-dn-NhW" id="urT-Fy-tKS"/>
                                         </connections>
                                     </collectionViewCell>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="calendarCell" id="UQZ-Co-QpL" customClass="CalendarCollectionCell" customModule="Bricket" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="calendarCell" id="UQZ-Co-QpL" customClass="CalendarCollectionCell" customModule="PulseApp" customModuleProvider="target">
                                         <rect key="frame" x="360" y="31.5" width="350" height="500"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="jn4-w6-DxH">
@@ -93,7 +102,7 @@
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </collectionViewCellContentView>
                                     </collectionViewCell>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="newsCell" id="nSq-ED-RmF" customClass="NewsCollectionCell" customModule="Bricket" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="newsCell" id="nSq-ED-RmF" customClass="NewsCollectionCell" customModule="PulseApp" customModuleProvider="target">
                                         <rect key="frame" x="720" y="31.5" width="350" height="500"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="qVt-Ux-0bs">
@@ -188,7 +197,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uve-nE-6oa">
                                 <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bKS-LI-Dr1" customClass="MenuBar" customModule="Bricket" customModuleProvider="target">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bKS-LI-Dr1" customClass="MenuBar" customModule="PulseApp" customModuleProvider="target">
                                         <rect key="frame" x="16" y="6" width="343" height="32"/>
                                         <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
